@@ -12,6 +12,7 @@
 
 ngIRCd CVSHEAD
 
+  - The type of service (TOS) of all sockets is set to "interactive" now.
   - Added short command line option "-t" as alternative to "--configtest".
   - Added optional support for "IDENT" lookups on incoming connections. You
     have to enable this function with the ./configure switch "--with-ident".
@@ -492,4 +493,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.221 2003/12/29 14:53:26 alex Exp $
+$Id: ChangeLog,v 1.222 2004/01/25 16:06:35 alex Exp $
